# ioc-topus

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
ioc_topus/: __init__.py  cli.py  config.py
ioc_topus/api/: urlscan.py  validin.py  virustotal.py
ioc_topus/core/: ioc.py  merge.py  processor.py
ioc_topus/gui/: app.py  widgets.py
ioc_topus/utils/: crypto.py  helpers.py  parsing.py
tests/: conftest.py  test_api_urlscan.py  test_api_validin.py  test_api_virustotal.py  test_gui.py  test_logic.py
